--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Flask-Cors==3.0.8
 gunicorn==20.0.4
 pytest==5.4.1
 pytest-flask==0.15.1
+python-dotenv==0.12.0
+python-dateutil==2.8.1
 requests==2.22.0
 soupsieve==2.0
 Werkzeug==1.0.0
