--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /venv/
 __pycache__
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
