--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,14 @@ python-dateutil==2.8.1
 requests==2.22.0
 soupsieve==2.0
 Werkzeug==1.0.0
+argparse==1.2.1
+distribute==0.6.24
+itsdangerous==0.24
+wsgiref==0.1.2
+boto==2.28.0
+WTForms==2.0.1
+SQLAlchemy==0.9.8
+Jinja2==2.7.3
+MarkupSafe==0.23
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.10.3
