--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ gunicorn==20.0.4
 pytest==5.4.1
 pytest-flask==0.15.1
 python-dotenv==0.12.0
-python-dateutil==2.8.1
-requests==2.22.0
+python-dateutil==2.1
+requests==2.20.1
 soupsieve==2.0
 Werkzeug==1.0.0
 argparse==1.2.1
@@ -19,3 +19,4 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.3
+botocore==1.15
