--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ beautifulsoup4==4.9.0
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-RESTful==0.3.8
+Flask-Script==2.0.6
+Flask-Migrate==2.5.2
 gunicorn==20.0.4
 pytest==5.4.1
 pytest-flask==0.15.1
