--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-Migrate==2.5.2
 gunicorn==20.0.4
+postgres==3.0.0
+psycopg2-binary==2.8.4
+psycopg2-pool==1.1
 pytest==5.4.1
 pytest-flask==0.15.1
 python-dotenv==0.12.0
