--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+Flask-Mail==0.9.1
 future==0.16.0
 gunicorn==20.0.4
 idna==2.7
