--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ boto==2.28.0
 botocore==1.15.0
 cached-property==1.5.1
 catalogue==1.0.0
+celery==4.4.2
 cement==2.8.2
 certifi==2020.4.5.1
 cffi==1.14.0
