--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 alembic==1.4.2
+amqp==2.5.2
 aniso8601==8.0.0
 attrs==19.3.0
 awsebcli==3.18.1
 bcrypt==3.1.7
 beautifulsoup4==4.9.0
+billiard==3.6.3.0
 blessed==1.17.5
+blinker==1.4
 blis==0.4.1
 boto==2.28.0
 botocore==1.15.0
@@ -24,15 +27,15 @@ docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.15.2
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
 Flask==1.1.1
 Flask-Cors==3.0.8
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
-Flask-Mail==0.9.1
 future==0.16.0
 gunicorn==20.0.4
 idna==2.7
@@ -40,6 +43,7 @@ itsdangerous==0.24
 Jinja2==2.10.1
 jmespath==0.9.5
 jsonschema==3.2.0
+kombu==4.6.8
 Mako==1.1.2
 MarkupSafe==0.23
 more-itertools==8.2.0
@@ -81,6 +85,7 @@ texttable==1.6.2
 thinc==7.4.0
 tqdm==4.46.0
 urllib3==1.24.3
+vine==1.3.0
 wasabi==0.6.0
 wcwidth==0.1.9
 websocket-client==0.57.0
