--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ blessed==1.17.5
 blinker==1.4
 blis==0.4.1
 boto==2.28.0
-botocore==1.15.0
+boto3==1.13.9
+botocore==1.16.9
 cached-property==1.5.1
 catalogue==1.0.0
 celery==4.4.2
