--- a/.ebextensions/11_celery_start.config
+++ b/.ebextensions/11_celery_start.config
@@ -5,4 +5,4 @@ commands:
               cd /opt/python/current/app
               . /opt/python/current/env
               source /opt/python/run/venv/bin/activate
-              celery multi start worker1 -A celery_runner
+              celery -A application worker
