--- a/.ebextensions/11_celery_start.config
+++ b/.ebextensions/11_celery_start.config
@@ -1,4 +1,4 @@
 commands:
     celery_start:
         command: |
-              celery -A application worker
+              celery multi start worker1 -A celery_runner
