--- a/.ebextensions/11_celery_start.config
+++ b/.ebextensions/11_celery_start.config
@@ -1,3 +1,5 @@
 commands:
     celery_start:
-        command: celery multi start worker1 -A tasks
+        command:
+        source venv/bin/activate
+        celery multi start worker1 -A tasks
