--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.1
 pytest-flask==0.15.1
+pytest-flask-sqlalchemy==1.0.2
 python-dateutil==2.1
 python-dotenv==0.12.0
 python-editor==1.0.4
@@ -81,7 +82,7 @@ semantic-version==2.5.0
 six==1.11.0
 soupsieve==2.0
 spacy==2.2.4
-SQLAlchemy==1.1.0
+SQLAlchemy==1.2.2
 srsly==1.0.2
 termcolor==1.1.0
 texttable==1.6.2
