--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.15.2
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Mail==0.9.1
@@ -62,27 +62,29 @@ psycopg2-pool==1.1
 py==1.8.1
 pyasn1==0.4.8
 pycparser==2.20
+pycurl==7.43.0.2
 PyNaCl==1.3.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.1
 pytest-flask==0.15.1
 pytest-flask-sqlalchemy==1.0.2
+pytest-mock==3.1.1
 python-dateutil==2.1
 python-dotenv==0.12.0
 python-editor==1.0.4
 pytz==2019.3
 PyYAML==5.3.1
 redis==3.5.2
-rq==1.4.1
 requests==2.20.1
+rq==1.4.1
 rsa==3.4.2
 s3transfer==0.3.3
 semantic-version==2.5.0
 six==1.11.0
 soupsieve==2.0
 spacy==2.2.4
-SQLAlchemy==1.2.2
+SQLAlchemy==1.3.18
 srsly==1.0.2
 termcolor==1.1.0
 texttable==1.6.2
